[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcp"
version = "0.1.0"
description = "일반 파이썬 함수를 MCP 서버로 변환해주는 도구"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",    
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pymcp"
"Bug Tracker" = "https://github.com/yourusername/pymcp/issues"

[project.scripts]
pymcp = "pymcp.__main__:main"

[tool.setuptools]
packages = ["pymcp", "pymcp.utils"] 